adicionando itens da conclusao

--- a/projeto-final/smart-hiring.ipynb
+++ b/projeto-final/smart-hiring.ipynb
@@ -1367,7 +1367,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta**:"
+    "**Resposta**:\n",
+    "\n",
+    "1-No primeiro caso utilizaria uma imagem com maior qualidade e aumentaria o contraste para capturar mais pontos chaves,\n",
+    "só que fazendo isso exigiria mais processamento para manter a mesma performance,\n",
+    "se não houvesse restrição de processamento em tempo real poderiamos utilizar a rede neural vgg ou restnet para melhorar a acurácia\n",
+    "\n",
+    "2- havendo restrição de processamento em tempo real, diminuiria o fps, caso fosse video, também tentaria utilizar outros sensores,\n",
+    "como a Apple faz com infravermelho para melhorar detecção da face.\n",
+    "Se não houvesse restrição de processamento em tempo real, aumentaria exponencialmente minha base de classificadores para diminuir o erro,\n",
+    "\n",
+    "6-havendo restrição de processamento em tempo real, testaria algumas redes mais rápidas como R-CNN.\n",
+    "Se não houvesse restrição de processamento em tempo real, testaria a nova YOLO9000, aumentaria o tamanho da imagem\n",
+    "e aplicaria hdr para melhorar a exposição na imagem inteira já que o objetivo é identificar\n",
+    "tudo que há na imagem e não só o assunto como nos outros itens"
    ]
   }
  ],
