--- a/projeto-final/smart-hiring.ipynb
+++ b/projeto-final/smart-hiring.ipynb
@@ -1371,16 +1371,19 @@
     "\n",
     "1-No primeiro caso utilizaria uma imagem com maior qualidade e aumentaria o contraste para capturar mais pontos chaves,\n",
     "só que fazendo isso exigiria mais processamento para manter a mesma performance,\n",
-    "se não houvesse restrição de processamento em tempo real poderiamos utilizar a rede neural vgg ou restnet para melhorar a acurácia\n",
+    "se não houvesse restrição de processamento em tempo real poderiamos utilizar a rede neural vgg ou restnet para melhorar a acurácia.\n",
     "\n",
     "2- havendo restrição de processamento em tempo real, diminuiria o fps, caso fosse video, também tentaria utilizar outros sensores,\n",
     "como a Apple faz com infravermelho para melhorar detecção da face.\n",
-    "Se não houvesse restrição de processamento em tempo real, aumentaria exponencialmente minha base de classificadores para diminuir o erro,\n",
+    "Se não houvesse restrição de processamento em tempo real, aumentaria exponencialmente minha base de classificadores para diminuir o erro.\n",
+    "Lembrando que neste trabalho fizemos o treinamento com apenas um candidato (a pessoa 0 do dicionário de dados). Num cenário ideal precisaríamos coletar faces de mais candidatos para o treinamento do modelo e fazer alguns ajustes no código, o que aumentaria o tempo de treinamento.\n",
+    "\n",
+    "3, 4 & 5 - Um ponto que poderia ser melhorado na detecção de sorrisos, bocejos e olhos fechados é a dependência da distância entre a face e a webcam para atingir os valores mínimos de aspecto de razão. Para a detecção de bocejos propomos como solução a utilização da largura da boca como um parâmetro extra porque esta pouco se altera mesmo quando a pessoa abre a boca ao máximo. Para a questão dos olhos e sorrisos precisaríamos usar outra referência ou até mesmo tentar medir/calcular a distância da face para a webcam, mas tudo isso não seria possível se houvesse restrição de processamento em tempo real. Além disso poderíamos tornar essas atividades mais precisas analisando o contexto da entrevista, ou seja, como o candidato reage diante de perguntas pré-elaboradas. Se não houvesse restrição de processamento em tempo real, ou ainda, se existisse a possibilidade de o vídeo ser gravado e analisado posteriormente, nós usaríamos leitura labial e análise de streaming para fazer transcrição da entrevista, junto com uma análise de sentimentos, para comparar a performance de cada candidato.\n",
     "\n",
     "6-havendo restrição de processamento em tempo real, testaria algumas redes mais rápidas como R-CNN.\n",
     "Se não houvesse restrição de processamento em tempo real, testaria a nova YOLO9000, aumentaria o tamanho da imagem\n",
     "e aplicaria hdr para melhorar a exposição na imagem inteira já que o objetivo é identificar\n",
-    "tudo que há na imagem e não só o assunto como nos outros itens"
+    "tudo que há na imagem e não só o assunto como nos outros itens."
    ]
   }
  ],
